# nptk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  THEMING_SYSTEM_COMPARISON.md  WAYLAND_MENU_ANALYSIS.md  test_font_system.rs
crates/: file_finder  file_icons  gpui  gpui_linux  gpui_platform  image_viewer  language_selector  migrator  paths  release_channel  (+5 more)
crates/gpui_platform/: Cargo.toml
examples/menubar/: Cargo.toml
examples/menubar/src/: main.rs
nptk-core/: Cargo.toml  README.md
nptk-core/src/: action.rs  component.rs  config.rs  diagnostics.rs  focus.rs  layout.rs  lib.rs  menu.rs  model.rs  plugin.rs  reference.rs  renderer.rs  shortcut.rs  text_input.rs  text_render.rs  widget.rs
nptk-core/src/app/: action.rs  async_app.rs  context.rs  focus.rs  font_ctx.rs  handler.rs  image_loader.rs  info.rs  keymap.rs  mod.rs  overlay_manager.rs  popup.rs  runner.rs  status_bar.rs  tooltip.rs  update.rs
nptk-core/src/app/handler/: events.rs  measure_bridge.rs  render.rs  wayland.rs
nptk-core/src/layout/: anchor.rs  breakpoint.rs  constraint.rs  context.rs  direction.rs  helpers.rs  invalidation.rs  measure.rs  overflow.rs  phase.rs  priority.rs
nptk-core/src/menu/: commands.rs  constants.rs  context.rs  manager.rs  mod.rs  render.rs  templates.rs  theme.rs  unified.rs
nptk-core/src/platform/: appmenu.rs  detection.rs  mod.rs  xdg_desktop_portal.rs
nptk-core/src/platform/wayland/: activation.rs  client.rs  clipboard.rs  core.rs  data_device.rs  decoration.rs  events.rs  fractional_scale.rs  globals.rs  idle.rs  mod.rs  presentation.rs  primary_selection.rs  shell.rs  surface.rs  text_input.rs  viewporter.rs  window.rs
nptk-core/src/platform/wayland/input/: keyboard.rs  mod.rs  pointer.rs  seat.rs  tablet.rs  touch.rs
nptk-core/src/platform/winit/: mod.rs
nptk-core/src/signal/: actor.rs  async_state.rs  combinators.rs  derived.rs  eval.rs  fixed.rs  future.rs  map.rs  memoized.rs  mod.rs  rw.rs  state.rs  zip.rs
nptk-core/src/tasks/: mod.rs  runner.rs
nptk-core/src/tasks/runner/: mod.rs  tokio_runner.rs
nptk-core/src/theme/: builtin.rs  error.rs  loader.rs  mod.rs  palette.rs  resolver.rs  roles.rs  terminal.rs  util.rs
nptk-core/src/theme/builtin/: mod.rs  sweet.rs
nptk-core/src/theme/roles/: alignment.rs  color.rs  flag.rs  metric.rs  mod.rs  path.rs  window.rs
nptk-core/src/theme/terminal/: colors.rs  mod.rs  resolver.rs
nptk-core/src/vgi/: appmenu.rs  atlas.rs  backend.rs  batching.rs  geometry_cache.rs  gpu_context.rs  hybrid_vg.rs  menu_info.rs  mod.rs  options.rs  plasma_menu.rs  platform.rs  pool.rs  renderer.rs  scene.rs  surface.rs  vello_vg.rs  wayland_surface.rs  wl_client.rs
nptk-core/src/vgi/wayland/: core.rs  decoration.rs  events.rs  fractional_scale.rs  globals.rs  mod.rs  presentation.rs  surface.rs  window.rs
nptk-core/src/vgi/wayland/input/: pointer.rs  touch.rs
nptk-services/: Cargo.toml
nptk-services/examples/: bookmarks.rs  places.rs
nptk-services/src/: bookmarks.rs  clipboard.rs  io_helpers.rs  lib.rs  places.rs  settings.rs
nptk-services/src/filesystem/: cache.rs  entry.rs  error.rs  icon.rs  io_uring.rs  mime_detector.rs  mime_registry.rs  mod.rs  model.rs  watcher.rs
nptk-services/src/icon/: cache.rs  error.rs  loader.rs  lookup.rs  mod.rs  theme.rs
nptk-services/src/thumbnail/: cache.rs  error.rs  events.rs  executor.rs  image_cache.rs  mod.rs  npio_adapter.rs  thumbnailify_provider.rs
nptk-services/tests/: bookmarks_test.rs  places_test.rs
nptk-theme/: Cargo.toml  README.md
nptk-theme/src/: app_integration.rs  config.rs  error.rs  globals.rs  helpers.rs  id.rs  lib.rs  manager.rs  properties.rs  rendering.rs  serde_color.rs  style.rs  theme_resolver.rs  transition.rs
nptk-theme/src/rendering/: context.rs  mod.rs  primitives.rs  state.rs
nptk-theme/src/rendering/components/: button.rs  checkbox.rs  mod.rs  slider.rs  text_input.rs
nptk-theme/src/theme/: celeste.rs  celeste.rs~  colors.rs  dark.rs  layout.rs  metrics.rs  mod.rs  palette.rs  sweet.rs  system.rs
nptk-widgets/: Cargo.toml  README.md
nptk-widgets-extra/: Cargo.toml
nptk-widgets-extra/src/: adaptive.rs  breadcrumbs.rs  choice.rs  expandable_section.rs  flex.rs  input_helpers.rs  layout_builder.rs  lib.rs  menu_button.rs  progress.rs  radio_button.rs  scroll_container.rs  secret_input.rs  sidebar.rs  spacer.rs  tabs_container.rs  text_input.rs  theme_rendering.rs  toggle.rs  toolbar.rs  value_input.rs  wrap.rs
nptk-widgets-extra/src/file_icon/: constants.rs  loader.rs  mod.rs  renderer.rs  theme.rs
nptk-widgets-extra/src/grid/: item.rs  mod.rs
nptk-widgets-extra/src/menu_popup/: constants.rs  mod.rs  theme.rs
nptk-widgets-extra/src/menubar/: adapter.rs  mod.rs  widget.rs
nptk-widgets-extra/src/menubar/common/: mod.rs
nptk-widgets-extra/src/menubar/dbus/: bridge.rs  menu_object.rs  registrar.rs  types.rs
nptk-widgets-extra/src/menubar/plasma/: mod.rs  wl_integration.rs
nptk-widgets/src/: animator.rs  button.rs  cached.rs  canvas.rs  checkbox.rs  container.rs  expandable_section.rs  fetcher.rs  file_icon.rs  file_list.rs  gesture_detector.rs  global_menu_bridge.rs  image.rs  item_view.rs  lib.rs  menu_button.rs  menu_popup.rs  menubar.rs  popup.rs  progress.rs  radio_button.rs  scroll_container.rs  secret_input.rs  sidebar.rs  slider.rs  tabs_container.rs  text.rs  text_input.rs  theme_rendering.rs  toggle.rs  toolbar.rs  value_input.rs
nptk-widgets/src/file_icon/: constants.rs  loader.rs  mod.rs  renderer.rs  theme.rs
nptk-widgets/src/file_list/: actions.rs  properties.rs  thumbnail_cache.rs  view_compact.rs  view_icon.rs  view_list.rs
nptk-widgets/src/icon/: constants.rs  loader.rs  mod.rs  renderer.rs  svg.rs
nptk-widgets/src/menu_popup/: constants.rs  conversion.rs  interaction.rs  layout.rs  mod.rs  rendering.rs  size.rs  theme.rs
nptk-widgets/src/menubar/: adapter.rs  mod.rs  widget.rs
nptk-widgets/src/menubar/common/: mod.rs
nptk-widgets/src/menubar/dbus/: bridge.rs  menu_object.rs  mod.rs  registrar.rs  types.rs
nptk-widgets/src/menubar/plasma/: mod.rs  wl_integration.rs
(+137 files in other folders)
