[workspace]
members = ["nptk-core", "nptk-macros", "nptk-theme", "nptk-widgets", "nptk-services", "examples/*"]

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["Dominik Adrian Grzywak <starterx4@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nepsod/nptk"
homepage = ""
categories = ["gui", "graphics", "rendering", "virtualization", "rendering::engine"]
keywords = ["ui", "gui", "interface", "graphics", "user-interface"]

[workspace.dependencies]
async-trait = "0.1"
bytemuck = "1.24.0"
vello = "0.6.0"
nalgebra = { version = "0.34", default-features = false, features = ["std"] }
indexmap = "2.12.0"
log = "0.4.29"
smol = "2.0"
tokio = { version = "1.48", features = ["parking_lot", "sync", "fs", "rt", "rt-multi-thread"] }
npio = { version = "0.0", path = "../npio" }
nptk-core = { version = "0.5.0", path = "nptk-core" }
nptk-macros = { version = "0.5.0", path = "nptk-macros" }
nptk-theme = { version = "0.5.0", path = "nptk-theme" }
nptk-widgets = { version = "0.5.0", path = "nptk-widgets" }
nptk-services = { version = "0.5.0", path = "nptk-services" }

[package]
name = "nptk"
description = "Lightning fast and powerful UI Framework for Rust."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
npio = { workspace = true }
nptk-core = { workspace = true }
nptk-theme = { workspace = true }
nptk-widgets = { workspace = true }
nptk-macros = { workspace = true, optional = true }
nptk-services = { workspace = true }
async-trait = { workspace = true }
vello = { workspace = true }
nalgebra = { workspace = true }
tokio = { workspace = true }

[features]
default = ["macros", "global-menu"]

# Exports useful macros for working with nptk.
macros = ["nptk-macros"]

# Exports `vello` and `skrifa` for drawing vector graphics. Useful if you want to create custom widgets.
vg = ["nptk-core/vg"]

# Enables the `Canvas` widget for drawing to the screen.
canvas = ["nptk-widgets/canvas"]

# Enables the dbus global menu feature (KDE Plasma 5/6); also enables "nptk-core/global-menu".
global-menu = ["nptk-widgets/global-menu"]

# Use the `tokio` runtime for running tasks inside a task runner.
tokio-runner = ["nptk-core/tokio-runner"]

[lib]
name = "nptk"
path = "src/lib.rs"
