[workspace]
resolver = "2"
members = [
    "crates/gpui",
    "crates/gpui_shared_string",
    "crates/gpui_linux",
    "crates/gpui_macros",
    "crates/gpui_platform",
    "crates/gpui_tokio",
    "crates/gpui_util",
    "crates/gpui_wgpu",
    "crates/util",
    "crates/util_macros",
    "crates/http_client",
    "crates/icons",
    "crates/menu",
    "crates/migrator",
    "crates/paths",
    "crates/release_channel",
    "crates/settings",
    "crates/settings_content",
    "crates/settings_json",
    "crates/settings_macros",
    "crates/syntax_theme",
    "crates/theme",
    "crates/theme_settings",
    "crates/ui",
    "crates/ui_macros",
    "crates/fs",
    "crates/text",
    "crates/proto",
    "crates/rope",
    "crates/git",
    "crates/askpass",
    "crates/telemetry",
    "crates/telemetry_events",
    "crates/net",
    "crates/clock",
    "crates/collections",
    "crates/component",
    "crates/refineable",
    "crates/sum_tree",
    "crates/scheduler",
    "crates/zlog",
    "crates/ztracing",
    "crates/ztracing_macro",
    "crates/http_client_tls",
    "tooling/perf",
]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
# 24 core toolkit crates mapped locally

gpui = { path = "crates/gpui", default-features = false }
gpui_shared_string = { path = "crates/gpui_shared_string" }
gpui_linux = { path = "crates/gpui_linux", default-features = false }
gpui_macros = { path = "crates/gpui_macros" }
gpui_platform = { path = "crates/gpui_platform", default-features = false }
gpui_tokio = { path = "crates/gpui_tokio" }
gpui_util = { path = "crates/gpui_util" }
gpui_wgpu = { path = "crates/gpui_wgpu" }
util = { path = "crates/util" }
util_macros = { path = "crates/util_macros" }
icons = { path = "crates/icons" }
menu = { path = "crates/menu" }
migrator = { path = "crates/migrator" }
paths = { path = "crates/paths" }
release_channel = { path = "crates/release_channel" }
settings = { path = "crates/settings", default-features = false }
settings_content = { path = "crates/settings_content" }
settings_json = { path = "crates/settings_json" }
settings_macros = { path = "crates/settings_macros" }
syntax_theme = { path = "crates/syntax_theme" }
theme = { path = "crates/theme" }
theme_settings = { path = "crates/theme_settings" }
ui = { path = "crates/ui" }
ui_macros = { path = "crates/ui_macros" }
fs = { path = "crates/fs" }
text = { path = "crates/text" }
proto = { path = "crates/proto" }
rope = { path = "crates/rope" }
git = { path = "crates/git" }
askpass = { path = "crates/askpass" }
telemetry = { path = "crates/telemetry" }
telemetry_events = { path = "crates/telemetry_events" }
net = { path = "crates/net" }
clock = { path = "crates/clock" }

collections = { path = "crates/collections", version = "0.1.0" }
component = { path = "crates/component" }
refineable = { path = "crates/refineable" }
derive_refineable = { path = "crates/refineable/derive_refineable" }
scheduler = { path = "crates/scheduler" }
sum_tree = { path = "crates/sum_tree" }
    http_client = { path = "crates/http_client" }
http_client_tls = { path = "crates/http_client_tls" }
zlog = { path = "crates/zlog" }
ztracing = { path = "crates/ztracing" }
ztracing_macro = { path = "crates/ztracing_macro" }
perf = { path = "tooling/perf" }

# External crates
aho-corasick = "1.1"
any_vec = "0.14"
anyhow = "1.0.86"
ashpd = { version = "0.13", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }
async-channel = "2.5.0"
async-compat = "0.2.1"
async-compression = { version = "0.4", features = ["bzip2", "gzip", "futures-io"] }
async-dispatcher = "0.1"
async-fs = "2.1"
async-io = "2.6.0"
async-lock = "3.4.2"
async-pipe = { git = "https://github.com/zed-industries/async-pipe-rs", rev = "82d00a04211cf4e1236029aa03e6b6ce2a74c553" }

async-recursion = "1.0.0"
async-tar = "0.5.1"
async-task = "4.7"
async-trait = "0.1"
async-tungstenite = "0.31.0"
async-process = "2.5.0"
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }
backtrace = "0.3"
base64 = "0.22"
bitflags = "2.6.0"
brotli = "8.0.2"
bytes = "1.0"
cfg-if = "1.0.3"
chardetng = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
circular-buffer = "1.0"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
const_format = "0.2"
convert_case = "0.8.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
cpal = "0.17"
crash-handler = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }
ctor = "0.4.0"
dashmap = "6.0"
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not",
] }
dirs = "6.0"
documented = "0.9.1"
dotenvy = "0.15.0"
dunce = "1.0"
ec4rs = "1.1"
emojis = "0.6.1"
env_logger = "0.11"
encoding_rs = "0.8"
exec = "0.3.1"
fancy-regex = "0.17.0"
fork = "0.4.0"
futures = "0.3.32"
futures-concurrency = "7.7.1"
futures-lite = "1.13"
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"] }
globset = "0.4"
heapless = "0.9.2"
handlebars = "4.3"
heck = "0.5"
hdrhistogram = "7"
heed = { version = "0.21.0", features = ["read-txn-no-tls"] }
hex = "0.4.3"
human_bytes = "0.4.1"
html5ever = "0.27.0"
http = "1.1"
http-body = "1.0"
ignore = "0.4.22"
image = "0.25.1"
imara-diff = "0.1.8"
indexmap = { version = "2.7.0", features = ["serde"] }
indoc = "2"
inventory = "0.3.19"
itertools = "0.14.0"
json_dotpath = "1.1"
jsonschema = "0.37.0"
jsonwebtoken = "10.0"
libc = "0.2"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
linkify = "0.10.0"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
lsp-types = { git = "https://github.com/zed-industries/lsp-types", rev = "f4dfa89a21ca35cd929b70354b1583fabae325f8" }
mach2 = "0.5"
markup5ever_rcdom = "0.3.0"
metal = "0.33"
mermaid-rs-renderer = { git = "https://github.com/zed-industries/mermaid-rs-renderer", rev = "782b89a7da3f0e91e51f98d00a93acba679be6fb", default-features = false }
minidumper = "0.9"
moka = { version = "0.12.10", features = ["sync"] }
nanoid = "0.4"
nix = "0.29"
nucleo = "0.5"
num-format = "0.4.4"
objc = "0.2"
open = "5.0.0"
ordered-float = "2.1.1"
palette = { version = "0.7.5", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
partial-json-fixer = "0.5.3"
parse_int = "0.9"
pciid-parser = "0.8.0"
pathdiff = "0.2"
percent-encoding = "2.3.2"
portable-pty = "0.9.0"
postage = { version = "0.5", features = ["futures-traits"] }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
proc-macro2 = "1.0.93"
profiling = "1"
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
proptest-derive = "0.8.0"
prost = "0.9"
prost-build = "0.9"
prost-types = "0.9"
pollster = "0.4.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
quick-xml = "0.38"
quote = "1.0.9"
rand = "0.9"
rayon = "1.8"
regex = "1.5"
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "zed-reqwest", version = "0.12.15-zed" }
rodio = { git = "https://github.com/RustAudio/rodio", rev = "e50e726ddd0292f6ef9de0dda6b90af4ed1fb66a", features = ["wav", "playback", "wav_output", "recording"] }
rsa = "0.9.6"
rust-embed = { version = "8.11", features = ["include-exclude"] }
rustc-hash = "2.1.0"
rustls = { version = "0.23.26" }
rustls-platform-verifier = "0.5.0"
scap = { git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, package = "zed-scap", version = "0.0.8-zed" }
schemars = { version = "1.0", features = ["indexmap2"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
serde_yaml_ng = "0.10"
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }
serde_path_to_error = "0.1.17"
serde_urlencoded = "0.7"
sha2 = "0.10"
shellexpand = "3.1"
shlex = "1.3.0"
simplelog = "0.12.2"
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
sqlformat = "0.2"
stacksafe = "0.1"
streaming-iterator = "0.1"
strsim = "0.11"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
sys-locale = "0.3.1"
sysinfo = "0.37.0"
take-until = "0.2.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
time = { version = "0.3", features = [
    "macros",
    "parsing",
    "serde",
    "serde-well-known",
    "formatting",
    "local-offset",
] }
tiny_http = "0.12"
tokio = { version = "1" }
tokio-socks = { version = "0.5.2", default-features = false, features = [
    "futures-io",
    "tokio",
] }
toml = "0.8"
toml_edit = { version = "0.22", default-features = false, features = [
    "display",
    "parse",
    "serde",
] }
tower-http = "0.4.4"
tree-sitter = { version = "0.26.8", features = ["wasm"] }
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "5cb9b693cfd7bfacab1d9ff4acac1a4150700609" }
tree-sitter-css = "0.23"
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = "0.3"
tree-sitter-embedded-template = "0.23.0"
tree-sitter-gitcommit = { git = "https://github.com/zed-industries/tree-sitter-git-commit", rev = "88309716a69dd13ab83443721ba6e0b491d37ee9" }
tree-sitter-go = "0.25"
tree-sitter-go-mod = { git = "https://github.com/camdencheek/tree-sitter-go-mod", rev = "2e886870578eeba1927a2dc4bd2e2b3f598c5f9a", package = "tree-sitter-gomod" }
tree-sitter-gowork = { git = "https://github.com/zed-industries/tree-sitter-go-work", rev = "acb0617bf7f4fda02c6217676cc64acb89536dc7" }
tree-sitter-heex = { git = "https://github.com/zed-industries/tree-sitter-heex", rev = "1dd45142fbb05562e35b2040c6129c9bca346592" }
tree-sitter-html = "0.23"
tree-sitter-jsdoc = "0.23"
tree-sitter-json = "0.24"
tree-sitter-md = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", rev = "9a23c1a96c0513d8fc6520972beedd419a973539" }
tree-sitter-python = "0.25"
tree-sitter-regex = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = { git = "https://github.com/zed-industries/tree-sitter-typescript", rev = "e2c53597d6a5d9cf7bbe8dccde576fe1e46c5899" }
tree-sitter-yaml = { git = "https://github.com/zed-industries/tree-sitter-yaml", rev = "baff0b51c64ef6a1fb1f8390f3ad6015b83ec13a" }
tracing = "0.1.40"
unicase = "2.6"
unicode-script = "0.5.7"
unicode-segmentation = "1.10"
unicode-width = "0.2"
unindent = "0.2.0"
url = "2.2"
urlencoding = "2.1.2"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
walkdir = "2.5"
wasm-encoder = "0.221"
wasmparser = "0.221"
wasmtime = { version = "36", default-features = false, features = [
    "async",
    "demangle",
    "runtime",
    "cranelift",
    "component-model",
    "incremental-cache",
    "parallel-compilation",
] }
wasmtime-wasi = "36"
wax = "0.7"
which = "6.0.0"
wasm-bindgen = "0.2.120"
web-time = "1.1.0"
wgpu = { git = "https://github.com/zed-industries/wgpu.git", rev = "357a0c56e0070480ad9daea5d2eaa83150b79e88" }
windows-core = "0.61"
yaml-rust2 = "0.8"
yawc = "0.2.5"
zeroize = "1.8"
zstd = "0.11"

windows = { version = "0.61", features = [
    "Foundation_Numerics",
    "Globalization_DateTimeFormatting",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectManipulation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_RestartManager",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
] }

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
notify = { git = "https://github.com/zed-industries/notify.git", rev = "ce58c24cad542c28e04ced02e20325a4ec28a31d" }
notify-types = { git = "https://github.com/zed-industries/notify.git", rev = "ce58c24cad542c28e04ced02e20325a4ec28a31d" }
windows-capture = { git = "https://github.com/zed-industries/windows-capture.git", rev = "f0d6c1b6691db75461b732f6d5ff56eed002eeb9" }
calloop = { git = "https://github.com/zed-industries/calloop" }
livekit = { git = "https://github.com/zed-industries/livekit-rust-sdks", rev = "147fbca3d4b592d96d33f5e6a84b59fc0b5d9bf1" }
libwebrtc = { git = "https://github.com/zed-industries/livekit-rust-sdks", rev = "147fbca3d4b592d96d33f5e6a84b59fc0b5d9bf1" }
webrtc-sys = { git = "https://github.com/zed-industries/livekit-rust-sdks", rev = "147fbca3d4b592d96d33f5e6a84b59fc0b5d9bf1" }

# Definition of the root nptk wrapper crate itself
[package]
name = "nptk"
version = "0.1.0"
description = "Nepsod Unified Platform Toolkit re-exporting GPUI and Zed components."
edition.workspace = true
authors = ["Dominik Adrian Grzywak <starterx4@gmail.com>"]
license = "GPL-3.0"

[dependencies]
anyhow.workspace = true
fs = { workspace = true }
gpui = { workspace = true, features = ["wayland", "x11"] }
gpui_platform = { workspace = true, features = ["font-kit", "wayland", "x11"] }
gpui_tokio = { workspace = true }
log.workspace = true
paths = { workspace = true }
settings = { workspace = true, features = ["editor"] }
theme = { workspace = true }
theme_settings = { workspace = true }
ui = { workspace = true }

[lib]
name = "nptk"
path = "src/lib.rs"

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16
debug = "limited"

[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = "limited"

[profile.dev.package]
gpui_macros = { opt-level = 3 }
settings_macros = { opt-level = 3 }
ui_macros = { opt-level = 3 }
util_macros = { opt-level = 3 }
quote = { opt-level = 3 }
syn = { opt-level = 3 }
proc-macro2 = { opt-level = 3 }
tree-sitter = { opt-level = 3 }
taffy = { opt-level = 3 }
resvg = { opt-level = 3 }
wasmtime = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
wasmtime-environ = { opt-level = 3 }
wasmtime-internal-cranelift = { opt-level = 3 }
minidumper = { opt-level = 3 }

assets = { codegen-units = 1 }
breadcrumbs = { codegen-units = 1 }
collections = { codegen-units = 1 }
prettier = { codegen-units = 1 }
theme_selector = { codegen-units = 1 }
time_format = { codegen-units = 1 }
ui_input = { codegen-units = 1 }

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
disallowed_methods = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"
