[package]
name = "nptk-core"
description = "Core Functionality for nptk UI => See the `nptk` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
winit = "0.30.9"
wgpu-types = "23.0.0"
wgpu = "26.0.1"
vello = { version = "0.4.1", optional = true }
vello_hybrid = { version = "0.0.4", optional = true }
vello_common = { version = "0.0.4", optional = true }
taffy = "0.8.1"
bitflags = "2.9.0"
skrifa = { version = "0.30.0", optional = true }
arc-swap = "1.7.1"
parking_lot = "0.12.3"
pollster = "0.3.0"
tokio = { version = "1.35.1", features = ["parking_lot", "rt-multi-thread"], optional = true }
nptk-theme = { workspace = true }
nalgebra = { workspace = true }
indexmap = { workspace = true }
peniko = "0.1.1"
kurbo = "0.11.3"
log = "0.4.21"
read-fonts = "0.29.2"
parley = "0.5.0"
fontique = "0.5.0"
harfrust = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
smithay-client-toolkit = { version = "0.18", optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", features = ["client"], optional = true }
wayland-protocols-plasma = { version = "0.2", features = ["client"], optional = true }
raw-window-handle = { version = "0.6", optional = true }
tempfile = { version = "3.10.1", optional = true }

[features]
default = ["vello"]
vg = ["skrifa"]
tokio-runner = ["tokio"]
vello = ["dep:vello", "dep:vello_common"]
vello-hybrid = ["vello_hybrid", "dep:vello_common"]
wayland = [
    "smithay-client-toolkit",
    "wayland-client",
    "wayland-protocols",
    "wayland-protocols-plasma",
    "raw-window-handle",
    "tempfile",
]