[package]
name = "nptk-core"
description = "Core Functionality for nptk UI => See the `nptk` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
winit = "0.30.9"
wgpu-types = "26.0.0"
vello = "0.6.0"
vello_hybrid = { version = "0.0.4", optional = true }
vello_common = "0.0.4"
taffy = "0.8.1"
bitflags = "2.10.0"
skrifa = { version = "0.37.0", optional = true }
arc-swap = "1.7.1"
pollster = "0.3.0"
tokio = { version = "1.35.1", features = ["parking_lot", "rt-multi-thread"], optional = true }
nptk-theme = { workspace = true }
nalgebra = { workspace = true }
indexmap = { workspace = true }
peniko = { workspace = true }
log = "0.4.21"
read-fonts = "0.29.2"
parley = "0.6.0"
harfrust = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
smithay-client-toolkit = { version = "0.18", optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", features = ["client"], optional = true }
wayland-protocols-plasma = { version = "0.3", features = ["client"], optional = true }
raw-window-handle = "0.6"
tempfile = { version = "3.10.1", optional = true }

[features]
default = []
vg = ["skrifa"]
tokio-runner = ["tokio"]
vello-hybrid = ["vello_hybrid"]
global-menu = ["wayland-client", "wayland-protocols-plasma"]
wayland = [
    "smithay-client-toolkit",
    "wayland-client",
    "wayland-protocols",
    "wayland-protocols-plasma",
    "tempfile",
]