[package]
name = "nptk-core"
description = "Core Functionality for nptk UI => See the `nptk` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
winit = { version = "0.30.9", default-features = false, features = ["x11", "rwh_06"] }
wgpu-types = "26.0.0"
vello = { workspace = true }
vello_hybrid = { version = "0.0.4", optional = true }
vello_common = "0.0.4"
taffy = "0.8.1"
bitflags = "2.10.0"
async-trait = "0.1"
skrifa = { version = "0.37.0", optional = true }
arc-swap = "1.7.1"
pollster = "0.3.0"
tokio = { version = "1.35.1", features = ["parking_lot", "rt-multi-thread"], optional = true }
nptk-theme = { workspace = true }
nalgebra = { workspace = true }
indexmap = { workspace = true }
nptk-services = { workspace = true }
xdg = "2.5"
log = "0.4.21"
lru = "0.12"
read-fonts = "0.29.2"
parley = "0.7.0"
harfrust = "0.2.0"
futures-lite = { version = "2.0", optional = true }
smol = { workspace = true }
image = "0.24"
futures = "0.3"
anyhow = "1.0.100"
stacker = "0.1.15"
toml = "0.8"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
smithay-client-toolkit = { version = "0.18", optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", features = ["client", "staging", "unstable"], optional = true }
wayland-protocols-plasma = { version = "0.3", features = ["client"], optional = true }
raw-window-handle = "0.6"
tempfile = { version = "3.10.1", optional = true }
xkbcommon-dl = { version = "0.4", optional = true }
libc = { version = "0.2", optional = true }
ashpd = { version = "0.12", optional = true }

[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "macos"))))'.dependencies.wayland-backend]
version = "0.3.10"
features = ["client_system", "dlopen"]
optional = true
default-features = false

[features]
default = ["wayland", "xdg-portal"]
vg = ["skrifa"]
tokio-runner = ["tokio"]
vello-hybrid = ["vello_hybrid"]
global-menu = ["wayland-client", "wayland-protocols-plasma"]
wayland = [
    "smithay-client-toolkit",
    "wayland-backend",
    "wayland-client",
    "wayland-protocols",
    "wayland-protocols-plasma",
    "tempfile",
    "xkbcommon-dl",
    "libc",
]
xdg-portal = ["ashpd", "tokio-runner", "futures-lite"]
