[package]
name = "nptk-services"
description = "Core services and settings management for nptk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
xdg = "2.5"
log = "0.4"
anyhow = "1.0"
nptk-theme = { workspace = true }
tokio = { version = "1.35", features = ["fs", "sync", "rt-multi-thread", "macros", "time"] }
notify = "6.1"
mime_guess = "2.0"
image = "0.25"
thiserror = "1.0"
