[package]
name = "nptk-services"
description = "Core services and settings management for nptk"
version.workspace = true
edition.workspace = true
license = "LGPL-3.0-only"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
xdg = "2.5"
log = "0.4"
anyhow = "1.0"
tokio = { version = "1.35", features = ["fs", "sync", "rt-multi-thread", "macros", "time"] }
notify = "6.1"
image = "0.25"
thiserror = "1.0"
thumbnailify = "0.1"
md5 = "0.7"
urlencoding = "2.1"
dirs = "5.0"
lru = "0.12"
smol = { workspace = true }
npio = { workspace = true }
once_cell = "1.18"
directories = "5.0"
futures = "0.3.31"