[package]
name = "nptk-theme"
description = "Themes & Styling for nptk UI => See the `nptk` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
indexmap = { workspace = true }
vello = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
