[package]
name = "nptk-widgets"
description = "Widgets for nptk UI => See the `nptk` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
vello_svg = { version = "0.8.0", default-features = false }
nptk-theme = { workspace = true }
nptk-core = { workspace = true, features = ["vg"] }
bytemuck = { workspace = true }
nalgebra = { workspace = true }
log = { workspace = true }
zbus = { version = "5.12.0", default-features = false, features = ["async-io", "blocking-api"], optional = true }
zvariant = { version = "5.1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
canvas = []
global-menu = ["zbus", "zvariant", "serde"]
