[package]
name = "nptk-widgets"
description = "Widgets for nptk UI => See the `nptk` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
vello_svg = { version = "0.8.0", default-features = false }
nptk-theme = { workspace = true }
nptk-services = { workspace = true }
nptk-core = { workspace = true, features = ["vg"] }
nptk-macros = { workspace = true }
bytemuck = { workspace = true }
nalgebra = { workspace = true }
log = { workspace = true }
zbus = { version = "5.12.0", default-features = false, features = ["async-io", "blocking-api"], optional = true }
zvariant = { version = "5.1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.35", features = ["sync"] }
x11-dl = { version = "2.21", optional = true }
chrono = { version = "0.4", default-features = true }
humansize = "2.1"
smol = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = { version = "0.31", optional = true }
wayland-protocols-plasma = { version = "0.3", features = ["client"], optional = true }

[features]
default = []
canvas = []
global-menu = ["zbus", "zvariant", "serde", "x11-dl", "wayland-client", "wayland-protocols-plasma", "nptk-core/global-menu"]
