[package]
name = "nptk-widgets"
description = "Widgets for nptk UI => See the `nptk` crate for more."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
vello_svg = { version = "0.8.0", default-features = false }
nptk-theme = { workspace = true }
nptk-services = { workspace = true }
nptk-core = { workspace = true, features = ["vg"] }
nptk-macros = { workspace = true }
nalgebra = { workspace = true }
log = { workspace = true }
smol = { workspace = true }
npio = { workspace = true }

[features]
default = []
canvas = []
