[package]
name = "gpui_platform"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/gpui_platform.rs"

[features]
default = []
font-kit = []
test-support = ["gpui/test-support"]
screen-capture = ["gpui/screen-capture", "gpui_linux/screen-capture"]
wayland = ["gpui_linux/wayland"]
x11 = ["gpui_linux/x11"]

[dependencies]
gpui.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui_linux.workspace = true
